--- a/Forge.Web/Styles/Components/_icons.scss
+++ b/Forge.Web/Styles/Components/_icons.scss
@@ -9,7 +9,7 @@
         height: 44px;*/
     }
 
-    &.icon--list{       @include icon("\f00b"); }
-    &.icon--settings{   @include icon("\f013"); }
-    &.icon--search{     @include icon("\f002"); }
+    &.icon--list{       @include icon("\f394"); }
+    &.icon--settings{   @include icon("\f13d"); }
+    &.icon--search{     @include icon("\f4a4"); }
 }
