--- a/Forge.Web/Views/Shared/_Layout.cshtml
+++ b/Forge.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <meta name="msapplication-navbutton-color" content="#bd4635">
     <meta name="apple-mobile-web-app-status-bar-style" content="#bd4635">
 
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
 
     @Scripts.Render("~/Scripts/vendor-js")    
     @Styles.Render("~/Styles/main-css")
