--- a/Forge.Web/Styles/_helpers.scss
+++ b/Forge.Web/Styles/_helpers.scss
@@ -41,12 +41,13 @@
 }
 
 .emphasis { 
-    font-weight: 500;
+    font-weight: 700;
     color: $color-secondary-50;
 }
 
 .list{
     .list__item{
+        button{ text-align: left; }
         //border-bottom: 1px solid rgba(black, 0.1);
         //&:last-child{ border-bottom: none; }
         //&:nth-child(even){ background: rgba(black, 0.05); }
@@ -55,14 +56,19 @@
 }
 
 .section--secondary{
-    background-color: $color-secondary-70;
+    background-color: $color-secondary-60;
+    background-image: url(../Content/Images/cubes.png);
 }
 
 .section--summary{
     padding: 10px;
     color: $color-primary-10;
 
-    h1{ text-shadow: 2px 2px rgba(black, 0.2); }
+    h1{
+        color: white;
+        text-shadow: 2px 2px $color-secondary-70;
+
+    }
 }
 
 .no-results{
@@ -78,10 +84,14 @@
 .panel {
     background: $color-primary-10;
     padding: 10px;
-    margin: 20px 0;
-    border: 1px solid $color-primary-60;
+    overflow: hidden;
+    border: 1px solid $color-primary-40;
 
-    @include soft-shadow();
+    //@include soft-shadow();
+
+    &+.panel {
+        margin-top: 20px;
+    }
 
     &.panel--centered{
         text-align: center;
@@ -97,9 +107,9 @@
     h4 {
         margin: -10px;
         margin-bottom: 20px;
-        background: rgba(white, 0.7);
+        background: white;
         padding: 10px;
-        font-size: 20px;
+        font-size: 22px;
     }
 }
 
