--- a/Forge.Web/Styles/Components/_designer__stage.scss
+++ b/Forge.Web/Styles/Components/_designer__stage.scss
@@ -81,7 +81,6 @@
 
     .definition__setting{
         position: relative;
-        padding: 10px 0;
 
         .field__value{ 
             font-size: 14px;
@@ -108,8 +107,8 @@
         }
 
         .definition__rule-tag{
-            color: $color-primary-60;
-             &:after{ content: "\f48c"; }
+            //color: $color-primary-60;
+             &:after{ content: "\f48d"; }
         }
 
         .definition__setting-remove{
@@ -118,9 +117,8 @@
         }
     }
 
-    .definition__tag--active,
-    .definition__setting--active,
-    .definition__nested-rule--active { 
+    .definition__tag--active { 
+
         background-color: $color-action-10 !important;
         color: $color-action-70 !important;
     }
@@ -128,6 +126,7 @@
     .definition__setting--active,
     .definition__nested-rule--active {
         transition: background-color 0.3s ease-in-out;
+        .field__label{ color: $color-action-60; }
     }
 
     .expandable__header { 
@@ -144,13 +143,12 @@
 
     .expandable__content{
         font-size: 10px;
-        padding: 10px;
+        padding: 5px;
     }
 
     .definition__overrides{
-        padding-left: 8px;
-        //opacity: 0.7;
-        border-left: 1px dotted $color-primary-60;
+        padding-left: 24px;
+        opacity: 0.6;
 
         li {
             .field__label,
@@ -189,6 +187,8 @@
         border-right: 1px solid $color-primary-40;
     }
 
+    
+
     @mixin menu-button($icon, $color){
         &:before{ content: $icon; }
         &:hover{ color: $color; }
@@ -199,6 +199,13 @@
     .stage__save-all { @include menu-button("\f382", $color-tertiary-50); }
     .stage__delete { @include menu-button("\f2d7", $color-red); }
     .stage__fav { @include menu-button("\f3ae", $color-primary-80); }
+
+    .stage__unsaved-count{
+        position: absolute;
+        top: 3px;
+        right: 3px;
+        text-shadow: 0 0 0 $color-background-menu-2;
+    }
 }
 
 
