--- a/Forge.Web/Styles/Components/_expandables.scss
+++ b/Forge.Web/Styles/Components/_expandables.scss
@@ -14,6 +14,7 @@
     .expandable__label{
         padding-left: 30px;
     }
+
     .expandable__button,
     .expandable__label {
         display: table-cell;
@@ -23,21 +24,19 @@
             font-family: "Ionicons";
             min-width: 0;
             padding: 0 10px;
-            color: $color-primary-80;
-            background: $color-primary-10;
-            border: 1px solid $color-primary-70;
+            color: $color-primary-70;
+            background: none;
 
             &:hover{
                 color: $color-primary-90;
-                border-color: $color-primary-80;
             }
 
             &:after {
                 display: inline-block;
-                content: "\f3d0";
+                content: "\f35f";
                 transform: rotate(0deg);
                 transition: transform 0.3s ease-in-out;
-                font-size: 16px;
+                font-size: 20px;
                 font-weight: bold;
             }
         }
