--- a/Forge.Web/Views/Designer/Index.cshtml
+++ b/Forge.Web/Views/Designer/Index.cshtml
@@ -8,7 +8,7 @@
 @section scripts{
     <script type="text/javascript">
         ReactDOM.render(
-            React.createElement(Designer.Provider, { id: @Model }),
+            React.createElement(Forge.Designer.Provider, { id: @Model }),
             document.getElementById('designer')
         );
     </script>
