--- a/Forge.Web/Views/Games/Index.cshtml
+++ b/Forge.Web/Views/Games/Index.cshtml
@@ -7,7 +7,7 @@
 @section scripts{
     <script type="text/javascript">
         ReactDOM.render(
-            React.createElement(Library.Provider),
+            React.createElement(Forge.Library.Provider),
             document.getElementById('library')
         );
     </script>
