--- a/Forge.Web/Views/Shared/_Layout.cshtml
+++ b/Forge.Web/Views/Shared/_Layout.cshtml
@@ -20,9 +20,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#bd4635">
 
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
-
-    @Scripts.Render("~/Scripts/vendor-js")    
-    @Styles.Render("~/Styles/main-css")
+    @*@Scripts.Render("~/Scripts/vendor-js")*@    
+    @*@Styles.Render("~/Styles/main-css")*@
 </head>
 <body>
 
@@ -34,17 +33,19 @@
 
     <div id="footer"></div>
 
-    @Scripts.Render("~/Scripts/app-js")
+    <!-- Scripts -->
+    <script src="~/Content/scripts.js"></script>
     @RenderSection("scripts", required: false)
 
+    <!-- Render -->
     <script type="text/javascript">
         ReactDOM.render(
-            React.createElement(Nav, @Html.Raw(user)),
+            React.createElement(Forge.Nav, @Html.Raw(user)),
             document.getElementById('nav')
         );
 
         ReactDOM.render(
-            React.createElement(Footer),
+            React.createElement(Forge.Footer),
             document.getElementById('footer')
         );
 
