Designer loading. Continue adding require statements.

--- a/Forge.Web/Views/Shared/_Layout.cshtml
+++ b/Forge.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     @*@Scripts.Render("~/Scripts/vendor-js")*@    
-    @*@Styles.Render("~/Styles/main-css")*@
+    @Styles.Render("~/Styles/main-css")
 </head>
 <body>
 
