--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -433,6 +433,7 @@ b {
 
 button,
 .button {
+  position: relative;
   display: inline-block;
   padding: 5px 0;
   cursor: pointer;
@@ -443,7 +444,8 @@ button,
   line-height: 12px;
   font-family: inherit;
   min-height: 30px;
-  min-width: 75px; }
+  min-width: 75px;
+  overflow: hidden; }
   button:hover,
   .button:hover {
     background: #1088b6; }
@@ -496,6 +498,9 @@ button,
     cursor: default;
     opacity: 0.5;
     pointer-events: none; }
+  button .button__clicky,
+  .button .button__clicky {
+    background: red; }
 
 h1 {
   font-size: 24px;
