--- a/Forge.Web/Styles/Components/_buttons.scss
+++ b/Forge.Web/Styles/Components/_buttons.scss
@@ -17,6 +17,7 @@ $nav-arrow-size: 10px;
 // ================================
 button,
 .button{
+    position: relative;
     display: inline-block;
     padding: 5px 0;
     cursor: pointer;
@@ -24,12 +25,11 @@ button,
     color: $color-primary-10;
     border: none;
     outline: none;
-    //font-size: 14px;
     line-height: 12px;
-    //border-radius: 3px;
     font-family: inherit;
     min-height: 30px;
     min-width: 75px;
+    overflow: hidden;
 
     &:hover{ background: $color-secondary-50; }
 
@@ -81,6 +81,10 @@ button,
         cursor: default;
         opacity: 0.5;
         pointer-events: none;
+    }
+
+    .button__clicky{
+        background: red;
     }
 }
 
