--- a/Forge.Web/Styles/Components/_designer__stage.scss
+++ b/Forge.Web/Styles/Components/_designer__stage.scss
@@ -53,7 +53,7 @@
     display: block;
 
     
-    span:nth-child(2){
+    .button__subtitle{
         font-size: 12px;
         color: $color-primary-80;
         margin-left: 10px;
