--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -439,6 +439,7 @@ button,
   background: #0d6d92;
   color: #f8f8f8;
   border: none;
+  border-radius: 3px;
   outline: none;
   line-height: 12px;
   font-family: inherit;
@@ -499,7 +500,19 @@ button,
     pointer-events: none; }
   button .button__clicky,
   .button .button__clicky {
-    background: red; }
+    position: absolute;
+    display: inline-block;
+    background: rgba(16, 136, 182, 0.7);
+    border-radius: 100%;
+    transform: scale(0); }
+  button.button--animate .button__clicky,
+  .button.button--animate .button__clicky {
+    animation: ripple 0.6s linear; }
+
+@keyframes ripple {
+  100% {
+    opacity: 0;
+    transform: scale(2); } }
 
 h1 {
   font-size: 24px;
@@ -606,7 +619,7 @@ h5 {
 
 .designer__link {
   display: block; }
-  .designer__link span:nth-child(2) {
+  .designer__link .button__subtitle {
     font-size: 12px;
     color: #6f6f6f;
     margin-left: 10px; }
